<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/ten" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/start_time"
            android:drawablePadding="10dp"
            android:text="@string/start_time"
            android:textColor="@color/comm_txt_listview_black" />

        <TextView
            android:id="@+id/txt_task_changedate_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/comm_txt_listview_black" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/ten"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/ten" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/end_time"
            android:drawablePadding="10dp"
            android:text="@string/end_time"
            android:textColor="@color/comm_txt_listview_black" />

        <TextView
            android:id="@+id/txt_task_changedate_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/comm_txt_listview_black" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_marginLeft="@dimen/ten" />

    <RelativeLayout 
        android:id="@+id/rlayout_task_changedate_newtime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/ten" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/end_time"
            android:drawablePadding="10dp"
            android:text="@string/new_end_time"
            android:textColor="@color/comm_txt_listview_black" />

        <TextView
            android:id="@+id/txt_task_changedate_newtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/red" />
<!--             android:drawableRight="@drawable/ic_contacts_department_fragment_arrow_default1" -->
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line" />
    
      <LinearLayout
        android:id="@+id/date_task_changedate_select_ly"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>