<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/leave_layout"
                style="@style/layout_padding_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_selecttor"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/parent_tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/approval_small_type" />

                <TextView
                    android:id="@+id/approval_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/C6" />
                
                   <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/common_ic_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

            <GridView
                android:id="@+id/grideview_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:horizontalSpacing="3dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:scrollbars="none"
                android:verticalSpacing="5dp" />

            <include layout="@layout/approval_people" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg_01"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/gray_text"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/blug_bg"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>